[project]
name = "interview-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "aioredis>=2.0.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=26.5.1",
    "dishka>=1.10.1",
    "fastapi[all]>=0.136.3",
    "isort>=8.0.1",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.50",
]
